feedpushr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedpushr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedpushr
  template:
    metadata:
      labels:
        app: feedpushr
    spec:
      containers:
        - name: feedpushr
          image: ncarlier/feedpushr
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: feedpushr-data
              mountPath: /var/opt/feedpushr
      volumes:
        - name: feedpushr-data
          persistentVolumeClaim:
            claimName: feedpushr-pvc
