feedpushr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedpushr
spec:
  selector:
    app: feedpushr
  ports:
    - port: 80
      targetPort: 80
