feedpushr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedpushr
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: feedpushr.home
      http:
        paths:
          - path: /ui/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: feedpushr
                port:
                  number: 80
